# mcp-registry-and-gateway-ui

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  build_and_push.sh  cookies.txt  docker-compose.yaml  nginx_mcp_revproxy.conf  pyproject.toml  reddit_post.md  secure.md  start_all_servers.sh
.github/workflows/: lint.yml  server-docker-image-build.yaml
agents/: agent.py
docker/: entrypoint.sh  nginx_rev_proxy.conf
docs/: emoji-for-developers.md  medium.md
examples/: nginx_rev_proxy.conf
registry/: .env.template  main.py  nginx_mcp_revproxy.conf  nginx_template.conf  oauth_service.py  pyproject.toml  requirements.txt  server_state.json  services.json
registry/servers/: costexplorer.json  currenttime.json  fininfo.json  legacy_billing.json  server_state.json  servers.json  test-service-2.json  test-service.json
registry/static/: style.css
registry/static/css/: styles.css
registry/templates/: index.html
servers/current_time/: client.py  server.py
servers/currenttime/: server.py
servers/fininfo/: client.py  pyproject.toml  server.py
servers/mcpgw/: client.py  pyproject.toml  server.py
servers/realserverfaketools/: client.py  server.py
